<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background_color" >

    <EditText
        android:id="@+id/firstname_input"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:background="@android:drawable/editbox_background"
        android:hint="@string/textview_firstname"
        android:inputType="text" />

    <EditText
        android:id="@+id/lastname_input"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/firstname_input"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="8dp"
        android:background="@android:drawable/editbox_background"
        android:hint="@string/textview_lastname"
        android:inputType="text" />

    <EditText
        android:id="@+id/email_input"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lastname_input"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="8dp"
        android:background="@android:drawable/editbox_background"
        android:hint="@string/textview_email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/password_input"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_input"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="8dp"
        android:background="@android:drawable/editbox_background"
        android:hint="@string/textview_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/birthday_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_input"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="8dp"
        android:background="@android:drawable/edit_text"
        android:gravity="center_vertical|center_horizontal|left"
        android:hint="@string/textview_birthday" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/birthday_button"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/rounded_button"
        android:onClick="sendToStoreAndLibrary"
        android:text="@string/button_register"
        android:textColor="@color/white_color"
        android:textSize="18sp" >
    </Button>

</RelativeLayout>